# py-tasks-celery

./: README.md  app.py  docker-compose.yml  pyproject.toml  tasks.py
