[tool.poetry]
name = "LabCelery"
version = "0.1.1"
description = "Lab de menssageria com Celery e Python"
authors = ["Fábio da Rosa"]

[tool.poetry.dependencies]
python = "^3.8"
flower = "^1.2.0"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
